php 7.3 and 7.4 tags with LDAP.

--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -7,6 +7,7 @@ RUN apk add --no-cache --virtual .build-deps \
     imagemagick-dev \
     libtool \
     libxml2-dev \
+    openldap-dev \
     postgresql-dev \
     sqlite-dev
 
@@ -49,6 +50,7 @@ RUN docker-php-ext-install \
     exif \
     iconv \
     intl \
+    ldap \
     mbstring \
     pdo \
     pdo_mysql \
@@ -68,10 +70,7 @@ ENV COMPOSER_ALLOW_SUPERUSER 1
 RUN curl -s https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
 
 # Install PHP_CodeSniffer
-RUN composer global require "squizlabs/php_codesniffer=*"
-
-# Install Laravel Envoy
-RUN composer global require "laravel/envoy"
+RUN composer global require "squizlabs/php_codesniffer=*" "laravel/envoy"
 
 # Cleanup dev dependencies
 RUN apk del -f .build-deps
